# uno

./: .gitignore  Cargo.toml
crates/uno-codegen/: Cargo.toml
crates/uno-codegen/src/: c.rs  error.rs  generate.rs  lib.rs  wasm.rs
crates/uno-ir/: Cargo.toml
crates/uno-ir/src/: lib.rs  lower.rs
crates/uno-lexer/: Cargo.toml
crates/uno-lexer/src/: lib.rs
crates/uno-parser/: Cargo.toml
crates/uno-parser/src/: lib.rs
crates/uno-syntax/: Cargo.toml
crates/uno-syntax/src/: ast.rs  backend.rs  diagnostic.rs  error.rs  lib.rs  source_file.rs  span.rs  token.rs
src/: interpreter.rs  main.rs
